[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/Plants/WhiteButton/WhiteButtonSpore.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/Plants/Basic/BasicSpore.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/CountAndStore.gd" type="Script" id=3]

[node name="CountAndStore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 3 )

[node name="SporeCount" type="GridContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 40.0
columns = 2

[node name="BasicSprite" type="TextureRect" parent="SporeCount"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="BasicSporeCount" type="Label" parent="SporeCount"]
margin_left = 36.0
margin_top = 9.0
margin_right = 44.0
margin_bottom = 23.0
text = "0"

[node name="WhiteButtonSprite" type="TextureRect" parent="SporeCount"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
texture = ExtResource( 1 )

[node name="WhiteButtonSporeCount" type="Label" parent="SporeCount"]
margin_left = 36.0
margin_top = 45.0
margin_right = 44.0
margin_bottom = 59.0
text = "0"

[node name="TextureRect3" type="TextureRect" parent="SporeCount"]
visible = false
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Label3" type="Label" parent="SporeCount"]
visible = false
margin_left = 36.0
margin_top = 81.0
margin_right = 44.0
margin_bottom = 95.0
text = "0"

[node name="TextureRect4" type="TextureRect" parent="SporeCount"]
visible = false
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="Label4" type="Label" parent="SporeCount"]
visible = false
margin_left = 36.0
margin_top = 117.0
margin_right = 44.0
margin_bottom = 131.0
text = "0"

[node name="Store" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 900.0
margin_top = 4.0
margin_right = 1027.0
margin_bottom = 120.0
custom_constants/vseparation = 30

[node name="BasicBuy" type="Button" parent="Store"]
margin_right = 117.0
margin_bottom = 20.0
text = "Basic: 5"

[node name="BigBasicBuy" type="Button" parent="Store"]
margin_top = 50.0
margin_right = 117.0
margin_bottom = 70.0
text = "BigBasic: 20"

[node name="WhiteButtonBuy" type="Button" parent="Store"]
margin_top = 100.0
margin_right = 117.0
margin_bottom = 120.0
text = "WhiteButton: 20"

[connection signal="pressed" from="Store/BasicBuy" to="." method="_on_BasicBuy_pressed"]
